--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "mySite/public"
-  command = "cd exampleSite && hugo --gc --themesDir ../.."
+  command = "cd mySite && hugo --gc --themesDir ../.."
   
 [build.environment]
   HUGO_VERSION = "0.70.0"
